[project]
name = "eden"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.2",
    "pydantic-settings>=2.6.0",
    "pydantic[email]>=2.9.2",
    "pyjwt>=2.9.0",
]

[tool.uv]
dev-dependencies = ["pytest-asyncio>=0.24.0", "pytest>=8.3.3"]
